# VINS-Fusion-ROS2

./: README_CN.md
camera_models/include/camodocal/gpl/: EigenQuaternionParameterization.h
camera_models/src/calib/: CameraCalibration.cc
camera_models/src/gpl/: EigenQuaternionParameterization.cc
config/: vins_rviz_config.rviz
config/oak_d_lite/: cam0_pinhole.yaml  cam1_pinhole.yaml  oak_d_lite_config.yaml
global_fusion/src/: globalOpt.cpp
loop_fusion/: CMakeLists.txt
loop_fusion/src/: pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp
oak_d_lite_driver/: package.xml  setup.cfg  setup.py
oak_d_lite_driver/launch/: oak_d_lite_vins.launch.py
oak_d_lite_driver/oak_d_lite_driver/: oak_d_lite_node.py
scripts/: extract_oak_calib.py
vins/src/: rosNodeTest.cpp
vins/src/estimator/: estimator.cpp
vins/src/factor/: pose_local_parameterization.cpp  pose_local_parameterization.h
vins/src/initial/: initial_sfm.cpp
vins/src/utility/: visualization.cpp
